<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".VerifyDriverInfo"
    android:orientation="horizontal">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="163dp"
            android:layout_height="147dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#F4F9FA"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_username"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tokenNum"
            android:layout_width="201dp"
            android:layout_height="41dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/token"
            android:textColor="@color/design_default_color_background"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:targetApi="jelly_bean" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:duplicateParentState="true"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/driver_name"
            android:textColorHint="#F8F5F5"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tokenNum"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_username"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#FAF6F6"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:duplicateParentState="true"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/licence_number"
            android:textColorHint="#F8F5F5"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tokenNum"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LLR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_username"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#FAF6F6"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDate"
            android:layout_width="328dp"
            android:layout_height="62dp"
            android:enabled="false"
            android:hint="@string/book_date"
            android:textColorHint="#F8F5F5"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_date"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#FFFFFF"
                tools:targetApi="jelly_bean" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTime"
            android:layout_width="329dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:hint="@string/phone_number"
            android:textColorHint="#FBF9F9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_time"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#FFFFFF"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutClass"
            android:layout_width="330dp"
            android:layout_height="62dp"
            android:enabled="false"
            android:hint="@string/class_type"
            android:textColorHint="#F8F5F5"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTime"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/classType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_class"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#FFFEFE"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGender"
            android:layout_width="330dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:hint="@string/gender"
            android:textColorHint="#FBFBFB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClass"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_gender"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#FDFBFB"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonConfirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="278dp"
            android:layout_height="54dp"
            android:background="#00BCD4"
            android:text="@string/verify"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGender"
            app:layout_constraintVertical_bias="0.306" />

        <TextView
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="9dp"
            android:gravity="center_horizontal"
            android:text="@string/autonomous_learner_driver_system"
            android:textColor="#F8F5F5"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </LinearLayout>
</ScrollView>
</LinearLayout>