<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".Login"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="98dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:background="#000000"
                app:srcCompat="@drawable/ic_login"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="128dp"
                tools:srcCompat="@drawable/ic_login" />

            <TextView
                android:id="@+id/confirmView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#FBFBFB"
                android:textSize="30sp"
                tools:layout_editor_absoluteY="220dp"
                tools:targetApi="jelly_bean" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="359dp"
                android:layout_height="71dp"
                android:hint="@string/username"
                android:textColorHint="#F6F4F4"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="285dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableEnd="@drawable/ic_username"
                    android:fontFamily="@font/poppinsmedium"
                    android:textColor="#FFFDFD"
                    tools:targetApi="jelly_bean"
                    android:drawableRight="@drawable/ic_username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="359dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:textColorHint="#F8F3F3"
                android:layout_marginTop="2dp"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="364dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableEnd="@drawable/ic_password"
                    android:fontFamily="@font/poppinsmedium"
                    android:inputType="textPassword"
                    android:textColor="#FAF9F9"
                    tools:targetApi="jelly_bean"
                    android:drawableRight="@drawable/ic_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="#00BCD4"
                android:text="@string/Login"
                tools:layout_editor_absoluteX="82dp"
                tools:layout_editor_absoluteY="463dp" />

            <Button
                android:id="@+id/buttonSignup"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#00BCD4"
                android:text="@string/sign_up"
                tools:layout_editor_absoluteX="82dp"
                tools:layout_editor_absoluteY="463dp" />

            <TextView
                android:layout_width="205dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/trouble_logging"
                android:textColor="#FDFDFD"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="571dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/autonomous_learner_driver_system"
                android:textColor="#F8F5F5"
                android:textSize="15sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.786"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>