<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090909"
    tools:context=".ConfirmDetails"
    android:orientation="horizontal">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="98dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:background="#070707"
            app:srcCompat="@drawable/verify"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="128dp"

            tools:srcCompat="@drawable/verify" />
        <TextView
            android:id="@+id/confirmView"
            android:layout_width="275dp"
            android:layout_height="85dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppinsbold"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/verify_driver_information"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutVehicleID"
            android:layout_width="320dp"
            android:layout_height="69dp"
            android:layout_marginTop="20dp"
            android:hint="@string/vehicle_id"
            android:textColorHint="#F4F0F0"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmView"
            app:passwordToggleTint="#FDFCFC">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vehicleID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_username"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#F4F0F0"
                tools:targetApi="jelly_bean"
                android:drawableRight="@drawable/ic_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTokenNum"
            android:layout_width="321dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:hint="@string/driver_token"
            android:textColorHint="#F4F1F1"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutVehicleID">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tokenNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="#EFEAEA"
                tools:targetApi="jelly_bean"
                android:drawableRight="@drawable/ic_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonVerify"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="312dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="#03A9F4"
            android:text="@string/verify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.646"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTokenNum"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/autonomous_learner_driver_system"
            android:textColor="#F8F5F5"
            android:textSize="15sp"
            android:layout_marginTop="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonVerify"
            app:layout_constraintVertical_bias="0.877" />

    </LinearLayout>
</ScrollView>

</LinearLayout>